# tunitas-scarpet

./: Contributing.md  Makefile.am  PACKAGES.md  README.md  buildconf  configure.ac
ac/: define-module.m4  enable-club.m4  enable-method.m4  enable-protocol.m4  enable-service.m4  enable-test-services.m4  enable-test-sets.m4  test-server.m4  with-storage.m4
check/lib/: libtests-run.am  libtests.am
lib/: libmod_scarpet.am  libtunitas-scarpet-application.am  libtunitas-scarpet.am
maintenance/: nearby  v2  v2+
noinst/lib/: .gitignore  libapp-authgen.am  libapp-diggity.am  libapp-genesis.am  libapp-publish.am  libapp-scissor.am  libapp-signify.am  libapp-zonegen.am  libapp.am  libautotools-autoconf+tunitas-scarpet.am  libmod_scarpet.am  libtunitas-scarpet-answer.am  libtunitas-scarpet-application.am  libtunitas-scarpet-compiler.am  libtunitas-scarpet-did.am  libtunitas-scarpet-dns.am  libtunitas-scarpet-drrs.am  libtunitas-scarpet-model.am  libtunitas-scarpet-pki.am  libtunitas-scarpet-resolve.am  libtunitas-scarpet.am  libwant.am
src/app/: Configuration.xcpp  Makefrag.am  namespace.xcpp  well_known.xcpp
src/app/authgen/: Configuration.xcpp  Makefrag.am  c.main.xcpp  defaults.xcpp  generate_common_name.xcpp  main.xcpp  namespace.xcpp  process.xcpp
src/app/cagen/: Configuration.xcpp  Makefrag.am  defaults.xcpp  generate_common_name.xcpp  main.xcpp  namespace.xcpp  process.xcpp
src/app/diggity/: Configuration.xcpp  Makefrag.am  c.main.xcpp  defaults.xcpp  examples.xcpp  main.xcpp  namespace.xcpp  process.xcpp
src/app/exception/: Aspect.xcpp  Bad_Domain.xcpp  Bad_Encoding.xcpp  Bad_Filepath.xcpp  Bad_Secret.xcpp  Makefrag.am  Quitting.xcpp  Version.xcpp  namespace.xcpp  partial.Quitting.xcpp  partial.Usage.xcpp
src/app/exits/: Code.xcpp  Makefrag.am  constants.xcpp  namespace.xcpp
src/app/genesis/: Configuration.xcpp  Makefrag.am  c.main.xcpp  defaults.xcpp  main.xcpp  namespace.xcpp  process.xcpp
src/app/keygen/: Configuration.xcpp  Makefrag.am  defaults.xcpp  main.xcpp  namespace.xcpp  process.xcpp
src/app/options/: Makefrag.am  Parser.xcpp  Specification.xcpp  get_domain.xcpp  get_encoding.xcpp  get_secret_literal.xcpp  indicator.constants.xcpp  indicator.xcpp  namespace.xcpp
src/app/publish/: Configuration.xcpp  Makefrag.am  c.main.xcpp  defaults.xcpp  examples.xcpp  json.load.xcpp  main.xcpp  namespace.xcpp  process.xcpp  tsig.load.xcpp  tsig.validate.xcpp  zone.load.xcpp
src/app/scissor/: Configuration.xcpp  Makefrag.am  c.main.xcpp  defaults.xcpp  generate_common_name.xcpp  main.xcpp  (+2 more)
src/tests/: Makefrag.am  namespace.xcpp
src/want/: Makefrag.am  namespace.xcpp  nonstd.strftime.xcpp  nonstd.to_string.xcpp  openssl.memory.Buffer.xcpp  stream.duo.Files.xcpp  stream.duo.gang.xcpp
tests/: Makefrag.am  start-contact-stop.test
tests/authgen/: Makefrag.am  error.CN+gencn.test  field.O.test  field.OU.test  field.all.test  option.dry-run.test  option.gen-cn.test  option.generate-cn.test  option.generate-common-name.test  option.quiet.test  option.w.test  rigging.sh  run.02.test
tests/cagen/: Makefrag.am  field.ST.test  option.warnings.test  rigging.sh
tests/diggity/: Makefrag.am  all.test  option.dryrun.test  option.n.test  option.name-server.test  option.ns.test  option.q.test  option.quiet.test  option.v.test  option.verbose.test  option.w.test  option.warning.test  option.y.test  rigging.sh  run.02.test
tests/genesis/: Makefrag.am  option.v.test  option.w.test  option.warnings.test  rigging.sh  run.05.der.test
tests/httpd/: Makefile  compile.am  ping-local
tests/keygen/: .gitignore  Makefrag.am  option.d.test  option.dry-run.test  option.dryrun.test  option.q.test  option.quiet.test  option.strip-armor.test  option.v.test  option.verbose.test  option.w.test  option.warning.test  option.warnings.test  option.y.test  rigging.sh  run.01.test  run.03.pem-keep.test
tests/publish/: Makefrag.am  option.d.test  option.ddss.test  option.did-document-json.test  option.did-document-storage-service.test  option.did-document-zone.test  option.did-document.test  option.did-domain.test  option.doc.test  option.document-json.test  option.document-zone.test  option.document.guess-json.test  option.document.guess-zone.test  option.document.test  option.domain.test  option.dry-run.test  option.dryrun.test  option.json.test  option.key.test  option.n.test  option.name-server-update-key.test  option.name-server-update-secret.test  option.name-server.test  option.ns.test  option.q.test  option.quiet.test  option.secret-file.test  option.server.test  option.update-key.test  option.v.test  option.verbose.test  option.w.test  option.warning.test  option.warnings.test  option.y.test  option.zone.test  rigging.sh  run.02.test  run.03.test
tests/scenarios/: .gitignore  Makefrag.am  rigging.sh  run.01.test  run.02.test
tests/scissor/: .gitignore  Makefrag.am  error.CN+gencn.test  field.C.test  field.L.test  field.OU.test  field.ST.test  option.certificate-signing-request.test  option.dryrun.test  option.gen-cn.test  option.gencn.test  option.help.test  option.private-key.test  option.private-side.test  option.private.test  option.public-key.test  option.public-side.test  option.public.test  option.q.test  option.request-side.test  option.request.test  option.signing-request.test  option.verbose.test  option.version.test  option.warning.test  option.warnings.test  rigging.sh  run.01.test  run.02.test
tests/signify/: .gitignore  Makefrag.am  option.authority-private-key.test  option.authority-private-side.test  option.authority-private.test  option.authority-public-crt.test  option.authority-public-side.test  option.authority-public.test  option.crt.test  option.d.test  option.dry-run.test  option.dryrun.test  option.h.test  option.key.test  option.private-key.test  option.private-side.test  option.public-side.test  option.q.test  option.quiet.test  option.v.test  option.verbose.test  option.w.test  option.warning.test  option.warnings.test  option.y.test  rigging.sh  run.01.test  run.02.test
tests/unit/: Makefrag.am
tests/zonegen/: Makefrag.am  rigging.sh
(+666 files in other folders)
